Closed Bug 843020 Opened 11 years ago Closed 11 years ago

start -> run file names with spaces don't load properly

Categories

(Firefox for Metro Graveyard :: Shell, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jimm, Assigned: jimm)

References

Details

(Whiteboard: [metro-mvp])

Attachments

(1 file)

STR:

1) set fx as the default desktop browser
2) create an html file on the desktop named '1 2 3.html'
3) start -> browse for the file and open

result:

desktop browser launches and we get three tabs. one with 
file:///C:/Users/(user)/Desktop/1
file:///C:/Users/(user)/Desktop/2
www.3.html

I'll post ceh output here in a sec, but that part looks ok.
SetParameters: ''
SetSelection param count: 1
SetSelection param: 'C:\Users\jim\Desktop\1 0 3.html'
No data object or data object has no text.
SetSelection target: C:\Users\jim\Desktop\1 0 3.html
Initialize(open)
IExecuteCommandApplicationHostEnvironment::GetValue()
GetUIMode: 0
QueryAppIsDefaultAll: 1
QueryCurrentDefault: 0
registeredApp=FirefoxURL
returning AHE_DESKTOP
Execute()
Desktop Launch: verb:open exe:T:\Mozilla\MC-REL\dist\bin\firefox.exe params:-url C:\Users\jim\Desktop\1 0 3.html
Actually, maybe we just need to quote that url param in the ceh to fix this.
Attached patch patchSplinter Review
yep, that fixes it.
Assignee: nobody → jmathies
Attachment #716012 - Flags: review?(netzen)
Attachment #716012 - Flags: review?(netzen) → review+
https://hg.mozilla.org/mozilla-central/rev/4780b6fe2826
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
OS: Windows 8 Metro → Windows 8.1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: