Bug 843020 - Quote parameters used in invoking the desktop browser via ShellExecute in the Win8 CEH. Fixes problems with file names with spaces. r=bbondy